// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`negative zero event Win - Chrome - swipe right 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1810.5,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.027716186256142486,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1.5,
          "deltaY": 0,
          "timeStamp": 5711.669999989681,
        },
        "isEnding": true,
        "isMomentum": true,
        "isMomentumCancel": false,
        "isStart": false,
      },
      "range": Array [
        95,
        95,
      ],
      "wheelType": "momentum",
    },
  ],
}
`;

exports[`negative zero event Win - Chrome - swipe right fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -3631.5,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.032752879522086574,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1.5,
          "deltaY": 0,
          "timeStamp": 40598.1900000188,
        },
        "isEnding": true,
        "isMomentum": true,
        "isMomentumCancel": false,
        "isStart": false,
      },
      "range": Array [
        107,
        107,
      ],
      "wheelType": "momentum",
    },
  ],
}
`;
